image stretching issue fixed

--- a/app/assets/stylesheets/dash/new_pitch.scss
+++ b/app/assets/stylesheets/dash/new_pitch.scss
@@ -159,6 +159,7 @@
 					width: 12.5vw; margin: 0 .5vw;
                     // img {width: 12vw; height: 12vh;}
                     .image {
+                        object-fit: cover;
                         width: 100%;
                         height: 100%;
                         border-radius: 1vh;
@@ -206,8 +207,7 @@
                         width: 100%;
                         height: 100%;
                         border-radius: 1vh;
-						// height: auto;
-						// max-height: 20vh;
+                        object-fit: cover;
 					}
 				}
 				.title {
@@ -1085,13 +1085,12 @@
                     // float: right;
                     position: relative;
                     video, img {
-                        // width: 10vw;
-                        // height: 10vh;
                         height: 28vh;
                         width: 100%;
                         position: relative;
                         border-radius: 1vh;
                     }
+
                     .time {
                         position: absolute;
                         right: 10.5vw;
@@ -1507,13 +1506,6 @@ input[type="file"] {
         }
     }
 
-    // .preview {
-    //     img {
-    //         height: 28vh;
-    //         width: 100%;
-    //         position: relative;
-    //     }
-    // }
     .dropzone-container {
         height: 28vh;
         width: 100%;
@@ -1651,6 +1643,12 @@ input[type="file"] {
     }
 }
 
+.preview .preview-img-tag {
+    object-fit: cover;
+}
+
+// Loading Part
+
 #loaderModal {
     .modal-content {
         background: transparent;
@@ -1666,7 +1664,7 @@ input[type="file"] {
     }
 }
 
-
+// Loader
 
 #loading-bar-spinner.spinner {
     left: 50%;
